# ehgp.github.io

./: .env.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .replit  404.html  AGENTS.md  README.md  TODO-AGENTS.md  __next.__PAGE__.txt  __next._index.txt  __next._tree.txt  about.html  config.py  config.toml  contact.html  contact.txt  eslint.config.mjs  freezer.py  index.html  index.txt  lighthouserc.json  my-work.html  next.config.mjs  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements.txt  resumes.html  site.webmanifest  style.css  tsconfig.json  vitest.config.ts  website.py
.gitlab/: .gitlab-ci-py.yml
_build/: CNAME
_not-found/: __next._full.txt  __next._index.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt
about/: __next._full.txt  __next._index.txt  __next._tree.txt  __next.about.__PAGE__.txt  index.html
contact/: __next._index.txt  __next._tree.txt  __next.contact.__PAGE__.txt  index.html
content/: about.md  home.md  my-work.md
docs/: animation-embed-guidelines.md  badge-strategy.md  migration-plan.md  observability.md  recaptcha-server-example.md
e2e/: navigation.spec.ts
ehgp.github.io Frozen Flask Website/: config.py  update_site.bat  website.py
ehgp.github.io_Frozen_Flask_Website/: .gitignore  config.py
me/: index.html
my-work/: __next._full.txt  __next._tree.txt  __next.my-work.__PAGE__.txt  index.html
public/: robots.txt
resumes/: __next._full.txt  __next._index.txt  __next._tree.txt  __next.resumes.__PAGE__.txt  __next.resumes.txt  index.html
test/: setup.ts
(+99 files in other folders)
